# wasmbench

html-insert-js/: README.md  index.html  insert.js
html-insert-rust/: Cargo.toml  README.md  index.html
html-insert-rust/src/: lib.rs
