[package]
name = "html-insert-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
chrono = "0.4.31"
wasm-bindgen = "0.2.89"
web-sys = { version ="0.3.66", features=["console","HtmlElement","Window","Document"] }
